# gnomad-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  noxfile.py
.github/workflows/: ci.yml
hooks/: pre_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  noxfile.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  setup.cfg
{{cookiecutter.package_name}}/.github/workflows/: ci.yml
{{cookiecutter.package_name}}/docs/: conf.py  generate_api_reference.py  index.rst  requirements.docs.in  requirements.docs.txt
