[metadata]
name = {{ cookiecutter.package_name }}
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
license_file = LICENSE
classifiers =
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
install_requires =
    # Hail is not listed here to avoid issues with installing
    # using the `--pkgs` argument to `hailctl dataproc start`
    gnomad
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where=src
